fix overflow issue on carousel 2

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,7 +1,7 @@
 .carousel {
     position: relative;
     width: 370px;
-    height: 260px;
+    height: 330px;
     margin: 0 auto;
 }
 
