--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -291,7 +291,7 @@ footer  a {
 }
 
 .grants .left {
-    width: 540px;
+    width: 580px;
     padding-right: 25px;
 }
 .grants .right {
